--- a/login.html
+++ b/login.html
@@ -10,18 +10,23 @@
     
     <div id="container">
         <div id="box">
+
             <div id="boxLogo">
                 <img src="Ativo 1.png" alt="">
                 <h1>Acesse sua conta</h1>
             </div>
-            <p>Login</p>
-            <input type="text" placeholder="Login">
-            <p>Senha</p>
-            <input type="password" placeholder="Senha">
 
-            <button>Acessar</button>
+            <div id="formLog">
+                <p>Email</p>
+                <input type="text" placeholder="Insira seu email">
+                <p>Senha</p>
+                <input type="password" placeholder="Insira sua senha">
+                <button>Acessar</button>
+            </div>
 
-            <p>Esqueceu sua senha? <a href="">Clique aqui</a></p>
+            <div id="esq">
+                <p>Esqueceu sua senha? <a href="">Clique aqui</a></p>
+            </div>
         </div>
     </div>
     
