atualização tela login

--- a/login.html
+++ b/login.html
@@ -17,11 +17,14 @@
             </div>
 
             <div id="formLog">
+                <div id="p_input">
                 <p>Email</p>
                 <input type="text" placeholder="Insira seu email">
                 <p>Senha</p>
                 <input type="password" placeholder="Insira sua senha">
+            </div>
                 <button>Acessar</button>
+                
             </div>
 
             <div id="esq">
