--- a/addProduto.html
+++ b/addProduto.html
@@ -7,9 +7,44 @@
     <title>Document</title>
     <link rel="stylesheet" href="addProduto.css">
     <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900&display=swap"
         rel="stylesheet">
-        <script src="https://kit.fontawesome.com/458a796de3.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/458a796de3.js" crossorigin="anonymous"></script>
+    <style>
+        #fileInput {
+            display: none;
+        }
+
+        #uparFoto {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 200px;
+            width: 200px;
+            border: none;
+            border-radius: 50%;
+            background-color: #ebe7e7;
+            position: relative;
+            overflow: hidden;
+            cursor: pointer;
+        }
+
+        #uparFoto img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
+
+        #uparFoto i {
+            z-index: 1;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,36 +59,85 @@
 
                 <div id="fotoProduto">
                     <div id="uparFoto">
-                        <a href=""><i class="fa-solid fa-camera"></i></a>
+                        <a href="javascript:void(0)"><i class="fa-solid fa-camera"></i></a>
+                        <img id="fotoPreview" src="" alt="Foto do Produto">
                     </div>
-
+                    <input type="file" id="fileInput" accept="image/*">
                     <p>Foto do Produto</p>
 
-                    <button>Salvar produto</button>
+                    <button id="saveProductButton">Salvar produto</button>
                 </div>
-
 
                 <div id="line"></div>
 
                 <div id="dados">
                     <p>Nome do Produto</p>
-                    <input type="text" name="" id="" placeholder="Nome ">
+                    <input type="text" id="nomeProduto" placeholder="Nome ">
 
                     <p>Preço</p>
-                    <input type="text" name="" id="" placeholder="Preço">
+                    <input type="text" id="precoProduto" placeholder="Preço">
 
                     <p>Quantidade</p>
-                    <input type="text" name="" id="" placeholder="Quantidade">
+                    <input type="text" id="quantidadeProduto" placeholder="Quantidade">
 
                     <p>Data de Validade</p>
-                    <input type="date" name="" id="" placeholder="Data de Validade">
+                    <input type="date" id="validadeProduto" placeholder="Data de Validade">
 
                     <p>Data de Inserção</p>
-                    <input type="date" name="" id="" placeholder="Data de Inserção">
+                    <input type="date" id="insercaoProduto" placeholder="Data de Inserção">
                 </div>
             </div>
         </div>
     </div>
+
+    <script>
+        document.getElementById('uparFoto').addEventListener('click', function() {
+            document.getElementById('fileInput').click();
+        });
+
+        document.getElementById('fileInput').addEventListener('change', function(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    const preview = document.getElementById('fotoPreview');
+                    preview.src = e.target.result;
+                    preview.style.display = 'block';
+                    document.querySelector('#uparFoto a').style.display = 'none';
+                    preview.style.zIndex = '1';
+                };
+                reader.readAsDataURL(file);
+            }
+        });
+
+        document.getElementById('saveProductButton').addEventListener('click', function() {
+            const nomeProduto = document.getElementById('nomeProduto').value;
+            const precoProduto = document.getElementById('precoProduto').value;
+            const quantidadeProduto = document.getElementById('quantidadeProduto').value;
+            const validadeProduto = document.getElementById('validadeProduto').value;
+            const insercaoProduto = document.getElementById('insercaoProduto').value;
+            const fotoProduto = document.getElementById('fotoPreview').src;
+
+            const produto = {
+                nome: nomeProduto,
+                preco: precoProduto,
+                quantidade: quantidadeProduto,
+                validade: validadeProduto,
+                insercao: insercaoProduto,
+                foto: fotoProduto
+            };
+
+            let produtos = JSON.parse(localStorage.getItem('produtos')) || [];
+            produtos.push(produto);
+            localStorage.setItem('produtos', JSON.stringify(produtos));
+
+            alert('Produto salvo com sucesso!');
+            window.location.href = 'home.html'; 
+        });
+    </script>
 </body>
 
 </html>
+
+
+
