--- a/dashboards.html
+++ b/dashboards.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Relatório de Estoque</title>
     <link rel="stylesheet" href="dashboards.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
+
 <body>
     <div id="cabecalho">
 
@@ -16,13 +18,93 @@
         <div id="links">
             <a href="">Dashboards</a>
             <a href="">Estoque</a>
-            <a href="">Informações</a>
             <a href="">Sobre Nós</a>
         </div>
     </div>
+    <div class="container">
+        <header>
+            <h1>Relatório de Estoque</h1>
+            <p>Resumo dos produtos em estoque, próximos da validade e os que estão com estoque baixo.</p>
+        </header>
+        <section>
+            <h2>Produtos em Estoque</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Produto</th>
+                        <th>Quantidade</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Produto A</td>
+                        <td>120</td>
+                    </tr>
+                    <tr>
+                        <td>Produto B</td>
+                        <td>85</td>
+                    </tr>
+                    <tr>
+                        <td>Produto C</td>
+                        <td>70</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <h2>Produtos Próximos da Validade</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Produto</th>
+                        <th>Data de Validade</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Produto D</td>
+                        <td>20/06/2024</td>
+                    </tr>
+                    <tr>
+                        <td>Produto E</td>
+                        <td>25/06/2024</td>
+                    </tr>
+                    <tr>
+                        <td>Produto F</td>
+                        <td>30/06/2024</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <h2>Produtos com Estoque Baixo</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Produto</th>
+                        <th>Quantidade</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Produto G</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>Produto H</td>
+                        <td>3</td>
+                    </tr>
+                    <tr>
+                        <td>Produto I</td>
+                        <td>2</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </div>
 
-    
-
+    <div id="rodape">
+        <h1> <span>© 2024 Estoque Plus.</span> All rights reserved.</h1>
     </div>
 </body>
 </html>
