--- a/home.html
+++ b/home.html
@@ -14,12 +14,12 @@
 <body>
     <div id="cabecalho">
         <div id="logo">
-            <img src="Ativo 1.png" alt="">
+            <img src="Ativo 1.png" alt="" href="home.html">
         </div>
         <div id="links">
-            <a href="">Dashboards</a>
-            <a href="">Estoque</a>
-            <a href="">Sobre Nós</a>
+            <a href="dashboards.html">Dashboards</a>
+            <a href="home.html">Estoque</a>
+            <a href="sobreNos.html">Sobre Nós</a>
         </div>
     </div>
 
